@@ -130,15 +130,13 @@ void collect_data(SynthEngine *synth, float value, unsigned char action, unsigne
                         type = TOPLEVEL::type::Learnable;
                     }
                 }
-                else if (!((insert == TOPLEVEL::insert::filterGroup) && (control == FILTERINSERT::formantFrequency || control == FILTERINSERT::formantAmplitude))) // this needs improving
-                { // formant frequency and amplitude are handled directly
-                    if (insert != UNUSED || kititem < EFFECT::type::none || kititem >= EFFECT::type::count)
-                    { // effect defaults handled directly
-                        putData.data.value = newValue;
-                        type = TOPLEVEL::type::Write;
-                        action |= TOPLEVEL::action::forceUpdate;
+                else if (insert != TOPLEVEL::insert::filterGroup  || parameter == UNUSED)
+                {
+                    std::cout << "setting for button 3";
+                    putData.data.value = newValue;
+                    type = TOPLEVEL::type::Write;
+                    action |= TOPLEVEL::action::forceUpdate;
                     // has to be write as it's 'set default'
-                    }
                 }
             }
             else if (buttons > 2)
