@@ -1,6 +1,11 @@
 yoshimi 2.3.0 rc9
 
 2023-5-26 Will
+bn 2236
+Resolved dynfilter freqency defaults.
+Cleaned up MiscGUI button 3 actions.
+Set version as 2.3.0 rc10
+
 bn 2235
 Resolved dynfilter formant defaults for all except frequency.
 
